--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,11 +2,19 @@ theme:
   logo: assets/wirt_logo.png
   favicon: assets/wirt_logo.png
   name: material  
-  palette:
-    primary: blue grey
-    scheme: slate
   features:
     - navigation.tabs
+  palette:
+    - scheme: default
+      primary: blue grey
+      toggle:
+        icon: material/brightness-7 
+        name: Switch to dark mode
+    - scheme: slate
+      primary: blue grey
+      toggle:
+        icon: material/brightness-4
+        name: Switch to light mode
 
 site_name: Wirt OÜ 
 site_description: networking cloud storage consultation
